Fixed table header alignment in sortable table in portlets.

--- a/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/rime/rime-portlet.css
+++ b/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/rime/rime-portlet.css
@@ -2287,7 +2287,7 @@ Disabled classes for the calendar controls
 .iceCmdSrtHdr {
     text-decoration: none; /*border: 1px solid #ABABAB;*/
     color: #333333;
-    width: 100%;
+    /*width: 100%;*/
     height: 100%;
     padding: 0px;
     display: block;
@@ -2296,7 +2296,7 @@ Disabled classes for the calendar controls
 .iceCmdSrtHdr-dis {
     text-decoration: none; /*border: 1px solid #ABABAB;*/
     color: #999999;
-    width: 100%;
+    /*width: 100%;*/
     height: 100%;
     padding: 0px;
     display: block;
